Initial debug of creating a preprocessing batch script

--- a/00_combine_inform_vectra_outputs.ipynb
+++ b/00_combine_inform_vectra_outputs.ipynb
@@ -64,7 +64,7 @@
     "    if singularity:\n",
     "        base = Path('/mnt') \n",
     "    else:\n",
-    "        base = Path('/ix/rbao/Projects/%s' % proj)\n",
+    "        base = Path('/ix/rbao/Projects/%s' % prj)\n",
     "    scripts = base.joinpath('scripts')\n",
     "                        \n",
     "#Custom helper functions:\n",
@@ -75,7 +75,7 @@
     "%autoreload 2\n",
     "\n",
     "results = base.joinpath('results')\n",
-    "# sampleinfo = base.joinpath('sampleinfo')\n",
+    "sampleinfo = base.joinpath('sampleinfo')\n",
     "# info = pd.read_excel(sampleinfo.joinpath('18_139_clinical_information.xlsx'),header=1)\n",
     "data = base.joinpath('data','inform_data_exports')\n",
     "# data =  data.joinpath('inform')\n",
@@ -115,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "79"
+       "2029"
       ]
      },
      "execution_count": 2,
@@ -124,7 +124,295 @@
     }
    ],
    "source": [
-    "len(keep_cols)"
+    "len(all_fns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c21dc554-248f-4e28-8df3-6e9df65b9534",
+   "metadata": {},
+   "source": [
+    "# Save sample list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cac08cc7-2e5d-464e-82c9-f6b4aff90475",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "all_fns = [x for x in data.rglob('*cell_seg_data.txt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "20e59854-e8c9-47e5-95af-b01f8e512efe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sampleinfo = base.joinpath('sampleinfo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2dc01d4b-55c5-4ca0-9e6e-dc01f02b5b3e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-NRG-HN003-Vectra/data/inform_data_exports/RACUWG_Scan1_[14325,51531]_cell_seg_data.txt'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = str(abs_base.joinpath('data','inform_data_exports')) + '/' + df.file.values\n",
+    "temp[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "51611f10-e5b3-4c51-8a14-e70ae2103536",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>task</th>\n",
+       "      <th>file</th>\n",
+       "      <th>fnpn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>RACUEV_Scan1_[7385,38436]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>RACUWG_Scan1_[14325,51531]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>RACVIR_Scan1_[17683,50985]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>RACUGF_Scan1_[14710,40334]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>RACVHW_Scan1_[12187,46446]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   task                                          file  \\\n",
+       "0     1   RACUEV_Scan1_[7385,38436]_cell_seg_data.txt   \n",
+       "1     2  RACUWG_Scan1_[14325,51531]_cell_seg_data.txt   \n",
+       "2     3  RACVIR_Scan1_[17683,50985]_cell_seg_data.txt   \n",
+       "3     4  RACUGF_Scan1_[14710,40334]_cell_seg_data.txt   \n",
+       "4     5  RACVHW_Scan1_[12187,46446]_cell_seg_data.txt   \n",
+       "\n",
+       "                                                fnpn  \n",
+       "0  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "1  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "2  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "3  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "4  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([])\n",
+    "df.loc[:,'task'] = np.array([i for i in range(1,2030)])\n",
+    "df.loc[:,'file'] = [x.parts[-1] for x in all_fns]\n",
+    "abs_base = Path('/ix/rbao/Projects/%s' % prj)\n",
+    "df.loc[:,'fnpn'] =   str(abs_base.joinpath('data','inform_data_exports')) + '/' + df.file.values \n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4fdfff17-d84a-4955-997d-6d49b79f531e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-NRG-HN003-Vectra/data/inform_data_exports/RACUWG_Scan1_[14325,51531]_cell_seg_data.txt'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.fnpn[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2d7d46c4-042b-4f91-b6a5-a4494415b6a6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv(sampleinfo.joinpath('file_list.tsv'),\n",
+    "          sep ='\\t',\n",
+    "          index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "727c3f15-a5d4-420b-b540-afddec40bcee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>task</th>\n",
+       "      <th>file</th>\n",
+       "      <th>loc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>RACUEV_Scan1_[7385,38436]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>RACUWG_Scan1_[14325,51531]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>RACVIR_Scan1_[17683,50985]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>RACUGF_Scan1_[14710,40334]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>RACVHW_Scan1_[12187,46446]_cell_seg_data.txt</td>\n",
+       "      <td>/ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   task                                          file  \\\n",
+       "0     0   RACUEV_Scan1_[7385,38436]_cell_seg_data.txt   \n",
+       "1     1  RACUWG_Scan1_[14325,51531]_cell_seg_data.txt   \n",
+       "2     2  RACVIR_Scan1_[17683,50985]_cell_seg_data.txt   \n",
+       "3     3  RACUGF_Scan1_[14710,40334]_cell_seg_data.txt   \n",
+       "4     4  RACVHW_Scan1_[12187,46446]_cell_seg_data.txt   \n",
+       "\n",
+       "                                                 loc  \n",
+       "0  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "1  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "2  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "3  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  \n",
+       "4  /ix/rbao/Projects/HCC-CBS-173-Hillman-BFerris-...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(sampleinfo.joinpath('file_list.tsv'),\n",
+    "                 sep = '\\t')\n",
+    "df.head()"
    ]
   },
   {
