--- a/01_R_try_phenopter_tumor_margin_tests.ipynb
+++ b/01_R_try_phenopter_tumor_margin_tests.ipynb
@@ -230,6 +230,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c578925-a80a-48f3-b098-b74b6e229a86",
+   "metadata": {},
+   "source": [
+    "# Save sample tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5308d874-d2a6-4fa1-bd8d-46ebdc060aad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "0efd6ae5-551d-4b90-ba94-18ddedcc9eda",
    "metadata": {},
    "source": [
@@ -319,7 +337,9 @@
   {
    "cell_type": "markdown",
    "id": "7a3d6e79-f38a-48ba-af70-dd37ef03219e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Reformat the cell_seg to contain new unified Phenotype column"
    ]
@@ -1197,92 +1217,18 @@
     "}\n",
     "fn <- file.path(results,sprintf('NRG-HN003-%dcell-measurements_%dcol.csv',dim(df)[1],dim(df)[2]))\n",
     "print(fn)\n",
-    "write.csv(df,fn)"
+    "write.csv(df,fn)\n",
+    "head(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "id": "2d7e078e-5d2f-456c-8116-646283887803",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 6 × 11</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>Sample Name</th><th scope=col>fn</th><th scope=col>Cell ID</th><th scope=col>cell.type</th><th scope=col>all.tumor.stroma</th><th scope=col>tissue.compartment</th><th scope=col>pdl1.expression</th><th scope=col>pd1.expression</th><th scope=col>combined.pheno</th><th scope=col>is.pdl1.cell</th><th scope=col>is.panck.cell</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>RACTIH_Scan1.qptiff</td><td>RACTIH_Scan1_[16434,44304]_cell_seg_data.txt</td><td>1</td><td>other</td><td>Stroma</td><td>outer.tumor.inv.margin</td><td>0.503</td><td>0.041</td><td>other  </td><td>FALSE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>RACTIH_Scan1.qptiff</td><td>RACTIH_Scan1_[16434,44304]_cell_seg_data.txt</td><td>2</td><td>other</td><td>Tumor </td><td>central.tumor         </td><td>0.133</td><td>0.293</td><td>PD1+   </td><td>FALSE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>RACTIH_Scan1.qptiff</td><td>RACTIH_Scan1_[16434,44304]_cell_seg_data.txt</td><td>3</td><td>other</td><td>Tumor </td><td>central.tumor         </td><td>0.074</td><td>0.269</td><td>PD1+   </td><td>FALSE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>RACTIH_Scan1.qptiff</td><td>RACTIH_Scan1_[16434,44304]_cell_seg_data.txt</td><td>4</td><td>other</td><td>Stroma</td><td>outer.tumor.inv.margin</td><td>0.224</td><td>0.054</td><td>other  </td><td>FALSE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>RACTIH_Scan1.qptiff</td><td>RACTIH_Scan1_[16434,44304]_cell_seg_data.txt</td><td>5</td><td>other</td><td>Tumor </td><td>inner.tumor.inv.margin</td><td>0.234</td><td>0.862</td><td>PD1+   </td><td>FALSE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>RACTIH_Scan1.qptiff</td><td>RACTIH_Scan1_[16434,44304]_cell_seg_data.txt</td><td>6</td><td>panck</td><td>Tumor </td><td>inner.tumor.inv.margin</td><td>0.721</td><td>0.454</td><td>CK+PD1+</td><td>FALSE</td><td> TRUE</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 × 11\n",
-       "\\begin{tabular}{r|lllllllllll}\n",
-       "  & Sample Name & fn & Cell ID & cell.type & all.tumor.stroma & tissue.compartment & pdl1.expression & pd1.expression & combined.pheno & is.pdl1.cell & is.panck.cell\\\\\n",
-       "  & <chr> & <chr> & <int> & <chr> & <chr> & <chr> & <dbl> & <dbl> & <chr> & <lgl> & <lgl>\\\\\n",
-       "\\hline\n",
-       "\t1 & RACTIH\\_Scan1.qptiff & RACTIH\\_Scan1\\_{[}16434,44304{]}\\_cell\\_seg\\_data.txt & 1 & other & Stroma & outer.tumor.inv.margin & 0.503 & 0.041 & other   & FALSE & FALSE\\\\\n",
-       "\t2 & RACTIH\\_Scan1.qptiff & RACTIH\\_Scan1\\_{[}16434,44304{]}\\_cell\\_seg\\_data.txt & 2 & other & Tumor  & central.tumor          & 0.133 & 0.293 & PD1+    & FALSE & FALSE\\\\\n",
-       "\t3 & RACTIH\\_Scan1.qptiff & RACTIH\\_Scan1\\_{[}16434,44304{]}\\_cell\\_seg\\_data.txt & 3 & other & Tumor  & central.tumor          & 0.074 & 0.269 & PD1+    & FALSE & FALSE\\\\\n",
-       "\t4 & RACTIH\\_Scan1.qptiff & RACTIH\\_Scan1\\_{[}16434,44304{]}\\_cell\\_seg\\_data.txt & 4 & other & Stroma & outer.tumor.inv.margin & 0.224 & 0.054 & other   & FALSE & FALSE\\\\\n",
-       "\t5 & RACTIH\\_Scan1.qptiff & RACTIH\\_Scan1\\_{[}16434,44304{]}\\_cell\\_seg\\_data.txt & 5 & other & Tumor  & inner.tumor.inv.margin & 0.234 & 0.862 & PD1+    & FALSE & FALSE\\\\\n",
-       "\t6 & RACTIH\\_Scan1.qptiff & RACTIH\\_Scan1\\_{[}16434,44304{]}\\_cell\\_seg\\_data.txt & 6 & panck & Tumor  & inner.tumor.inv.margin & 0.721 & 0.454 & CK+PD1+ & FALSE &  TRUE\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 × 11\n",
-       "\n",
-       "| <!--/--> | Sample Name &lt;chr&gt; | fn &lt;chr&gt; | Cell ID &lt;int&gt; | cell.type &lt;chr&gt; | all.tumor.stroma &lt;chr&gt; | tissue.compartment &lt;chr&gt; | pdl1.expression &lt;dbl&gt; | pd1.expression &lt;dbl&gt; | combined.pheno &lt;chr&gt; | is.pdl1.cell &lt;lgl&gt; | is.panck.cell &lt;lgl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | RACTIH_Scan1.qptiff | RACTIH_Scan1_[16434,44304]_cell_seg_data.txt | 1 | other | Stroma | outer.tumor.inv.margin | 0.503 | 0.041 | other   | FALSE | FALSE |\n",
-       "| 2 | RACTIH_Scan1.qptiff | RACTIH_Scan1_[16434,44304]_cell_seg_data.txt | 2 | other | Tumor  | central.tumor          | 0.133 | 0.293 | PD1+    | FALSE | FALSE |\n",
-       "| 3 | RACTIH_Scan1.qptiff | RACTIH_Scan1_[16434,44304]_cell_seg_data.txt | 3 | other | Tumor  | central.tumor          | 0.074 | 0.269 | PD1+    | FALSE | FALSE |\n",
-       "| 4 | RACTIH_Scan1.qptiff | RACTIH_Scan1_[16434,44304]_cell_seg_data.txt | 4 | other | Stroma | outer.tumor.inv.margin | 0.224 | 0.054 | other   | FALSE | FALSE |\n",
-       "| 5 | RACTIH_Scan1.qptiff | RACTIH_Scan1_[16434,44304]_cell_seg_data.txt | 5 | other | Tumor  | inner.tumor.inv.margin | 0.234 | 0.862 | PD1+    | FALSE | FALSE |\n",
-       "| 6 | RACTIH_Scan1.qptiff | RACTIH_Scan1_[16434,44304]_cell_seg_data.txt | 6 | panck | Tumor  | inner.tumor.inv.margin | 0.721 | 0.454 | CK+PD1+ | FALSE |  TRUE |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  Sample Name         fn                                           Cell ID\n",
-       "1 RACTIH_Scan1.qptiff RACTIH_Scan1_[16434,44304]_cell_seg_data.txt 1      \n",
-       "2 RACTIH_Scan1.qptiff RACTIH_Scan1_[16434,44304]_cell_seg_data.txt 2      \n",
-       "3 RACTIH_Scan1.qptiff RACTIH_Scan1_[16434,44304]_cell_seg_data.txt 3      \n",
-       "4 RACTIH_Scan1.qptiff RACTIH_Scan1_[16434,44304]_cell_seg_data.txt 4      \n",
-       "5 RACTIH_Scan1.qptiff RACTIH_Scan1_[16434,44304]_cell_seg_data.txt 5      \n",
-       "6 RACTIH_Scan1.qptiff RACTIH_Scan1_[16434,44304]_cell_seg_data.txt 6      \n",
-       "  cell.type all.tumor.stroma tissue.compartment     pdl1.expression\n",
-       "1 other     Stroma           outer.tumor.inv.margin 0.503          \n",
-       "2 other     Tumor            central.tumor          0.133          \n",
-       "3 other     Tumor            central.tumor          0.074          \n",
-       "4 other     Stroma           outer.tumor.inv.margin 0.224          \n",
-       "5 other     Tumor            inner.tumor.inv.margin 0.234          \n",
-       "6 panck     Tumor            inner.tumor.inv.margin 0.721          \n",
-       "  pd1.expression combined.pheno is.pdl1.cell is.panck.cell\n",
-       "1 0.041          other          FALSE        FALSE        \n",
-       "2 0.293          PD1+           FALSE        FALSE        \n",
-       "3 0.269          PD1+           FALSE        FALSE        \n",
-       "4 0.054          other          FALSE        FALSE        \n",
-       "5 0.862          PD1+           FALSE        FALSE        \n",
-       "6 0.454          CK+PD1+        FALSE         TRUE        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "head(df)"
    ]
