Advanced dplyr pipes to quickly transform full dataframe to desired outputs

--- a/01_R_use_phenopter_define_tiv_margin.ipynb
+++ b/01_R_use_phenopter_define_tiv_margin.ipynb
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "id": "025b0839-c1e9-4804-acef-8ee3e8e6cc0a",
    "metadata": {
     "tags": []
@@ -1159,6 +1159,7 @@
     "dist = 35\n",
     "\n",
     "for (fn in fns){\n",
+    "    print(fn)\n",
     "    csd <- read.csv(file.path(inform.data,fn),\n",
     "               sep = '\\t',\n",
     "               check.names=FALSE) #check.names=FALSE will prevent replacing spaces with periods\\\n",
@@ -1224,7 +1225,7 @@
     "    }\n",
     "    df<- rbind(df,sub[,keep.cols])\n",
     "}\n",
-    "fn <- file.path(results,sprintf('NRG-HN003-%dcell-measurements_%dcol.csv',dim(df)[1],dim(df)[2]))\n",
+    "fn <- file.path(results,sprintf('NRG-HN003-%dcell-measurements_%dcol_v2.csv',dim(df)[1],dim(df)[2]))\n",
     "print(fn)\n",
     "write.csv(df,fn)\n",
     "head(df)\n",
