--- a/02_generate_tables.ipynb
+++ b/02_generate_tables.ipynb
@@ -1603,6 +1603,116 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "1b8693b0-b7d1-4386-9447-cbeb534c5830",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'RACTIH'</li><li>'RACTKE'</li><li>'RACTLH'</li><li>'RACTNY'</li><li>'RACTRF'</li><li>'RACTRU'</li><li>'RACTWT'</li><li>'RACTXK'</li><li>'RACTXV'</li><li>'RACTYV'</li><li>'RACUEV'</li><li>'RACUGF'</li><li>'RACUVL'</li><li>'RACUWG'</li><li>'RACUWR'</li><li>'RACUWY'</li><li>'RACUXG'</li><li>'RACUZD'</li><li>'RACUZX'</li><li>'RACVAN'</li><li>'RACVCZ'</li><li>'RACVET'</li><li>'RACVGZ'</li><li>'RACVHW'</li><li>'RACVHX'</li><li>'RACVHY'</li><li>'RACVHZ'</li><li>'RACVIR'</li><li>'RACVIS'</li><li>'RACVIV'</li><li>'RACVIZ'</li><li>'RACVJC'</li><li>'RACVKA'</li><li>'RACVLA'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'RACTIH'\n",
+       "\\item 'RACTKE'\n",
+       "\\item 'RACTLH'\n",
+       "\\item 'RACTNY'\n",
+       "\\item 'RACTRF'\n",
+       "\\item 'RACTRU'\n",
+       "\\item 'RACTWT'\n",
+       "\\item 'RACTXK'\n",
+       "\\item 'RACTXV'\n",
+       "\\item 'RACTYV'\n",
+       "\\item 'RACUEV'\n",
+       "\\item 'RACUGF'\n",
+       "\\item 'RACUVL'\n",
+       "\\item 'RACUWG'\n",
+       "\\item 'RACUWR'\n",
+       "\\item 'RACUWY'\n",
+       "\\item 'RACUXG'\n",
+       "\\item 'RACUZD'\n",
+       "\\item 'RACUZX'\n",
+       "\\item 'RACVAN'\n",
+       "\\item 'RACVCZ'\n",
+       "\\item 'RACVET'\n",
+       "\\item 'RACVGZ'\n",
+       "\\item 'RACVHW'\n",
+       "\\item 'RACVHX'\n",
+       "\\item 'RACVHY'\n",
+       "\\item 'RACVHZ'\n",
+       "\\item 'RACVIR'\n",
+       "\\item 'RACVIS'\n",
+       "\\item 'RACVIV'\n",
+       "\\item 'RACVIZ'\n",
+       "\\item 'RACVJC'\n",
+       "\\item 'RACVKA'\n",
+       "\\item 'RACVLA'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'RACTIH'\n",
+       "2. 'RACTKE'\n",
+       "3. 'RACTLH'\n",
+       "4. 'RACTNY'\n",
+       "5. 'RACTRF'\n",
+       "6. 'RACTRU'\n",
+       "7. 'RACTWT'\n",
+       "8. 'RACTXK'\n",
+       "9. 'RACTXV'\n",
+       "10. 'RACTYV'\n",
+       "11. 'RACUEV'\n",
+       "12. 'RACUGF'\n",
+       "13. 'RACUVL'\n",
+       "14. 'RACUWG'\n",
+       "15. 'RACUWR'\n",
+       "16. 'RACUWY'\n",
+       "17. 'RACUXG'\n",
+       "18. 'RACUZD'\n",
+       "19. 'RACUZX'\n",
+       "20. 'RACVAN'\n",
+       "21. 'RACVCZ'\n",
+       "22. 'RACVET'\n",
+       "23. 'RACVGZ'\n",
+       "24. 'RACVHW'\n",
+       "25. 'RACVHX'\n",
+       "26. 'RACVHY'\n",
+       "27. 'RACVHZ'\n",
+       "28. 'RACVIR'\n",
+       "29. 'RACVIS'\n",
+       "30. 'RACVIV'\n",
+       "31. 'RACVIZ'\n",
+       "32. 'RACVJC'\n",
+       "33. 'RACVKA'\n",
+       "34. 'RACVLA'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"RACTIH\" \"RACTKE\" \"RACTLH\" \"RACTNY\" \"RACTRF\" \"RACTRU\" \"RACTWT\" \"RACTXK\"\n",
+       " [9] \"RACTXV\" \"RACTYV\" \"RACUEV\" \"RACUGF\" \"RACUVL\" \"RACUWG\" \"RACUWR\" \"RACUWY\"\n",
+       "[17] \"RACUXG\" \"RACUZD\" \"RACUZX\" \"RACVAN\" \"RACVCZ\" \"RACVET\" \"RACVGZ\" \"RACVHW\"\n",
+       "[25] \"RACVHX\" \"RACVHY\" \"RACVHZ\" \"RACVIR\" \"RACVIS\" \"RACVIV\" \"RACVIZ\" \"RACVJC\"\n",
+       "[33] \"RACVKA\" \"RACVLA\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "row.names(all.measures)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d003adbe-7366-4857-8dbe-eccb1ee2e640",
    "metadata": {},
@@ -2063,6 +2173,119 @@
    "source": [
     "mv <- apply(all.measures, 2, median)\n",
     "mv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "1d28a52a-6f96-4286-852d-7b7c3b5283aa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 × 34 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>RACTIH</th><th scope=col>RACTKE</th><th scope=col>RACTLH</th><th scope=col>RACTNY</th><th scope=col>RACTRF</th><th scope=col>RACTRU</th><th scope=col>RACTWT</th><th scope=col>RACTXK</th><th scope=col>RACTXV</th><th scope=col>RACTYV</th><th scope=col>⋯</th><th scope=col>RACVHX</th><th scope=col>RACVHY</th><th scope=col>RACVHZ</th><th scope=col>RACVIR</th><th scope=col>RACVIS</th><th scope=col>RACVIV</th><th scope=col>RACVIZ</th><th scope=col>RACVJC</th><th scope=col>RACVKA</th><th scope=col>RACVLA</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>all.stroma_all.cell_pdl1.expression</th><td>0.5920</td><td> 2.9370</td><td>0.5130</td><td>0.3970</td><td>0.5000</td><td>1.1100</td><td> 1.5230</td><td> 2.7920</td><td> 1.9680</td><td> 2.1200</td><td>⋯</td><td> 1.8600</td><td>0.6780</td><td> 2.0470</td><td> 2.0965</td><td>0.8150</td><td> 3.4660</td><td> 1.5620</td><td>0.3765</td><td> 2.0290</td><td>0.6620</td></tr>\n",
+       "\t<tr><th scope=row>all.stroma_all.pdl1.cell_percent.density</th><td>2.4819</td><td>36.9659</td><td>3.9697</td><td>0.9533</td><td>1.5253</td><td>8.9148</td><td>15.6955</td><td>32.1068</td><td>17.4949</td><td>26.2926</td><td>⋯</td><td>20.8577</td><td>3.1912</td><td>23.1009</td><td>25.3843</td><td>4.6836</td><td>42.1493</td><td>15.3100</td><td>3.9041</td><td>16.2654</td><td>7.3580</td></tr>\n",
+       "\t<tr><th scope=row>all.stroma_cd8.t.cell_percent.density</th><td>0.0092</td><td> 1.5515</td><td>0.2723</td><td>1.2966</td><td>0.9067</td><td>1.7533</td><td> 1.1781</td><td> 4.0825</td><td> 2.0545</td><td> 4.3209</td><td>⋯</td><td> 1.0760</td><td>1.6725</td><td>15.4792</td><td> 1.5936</td><td>2.2484</td><td> 2.9825</td><td> 6.3502</td><td>0.7344</td><td> 8.1594</td><td>0.0972</td></tr>\n",
+       "\t<tr><th scope=row>all.stroma_panck.pdl1.cell_pdl1.expression</th><td>3.0460</td><td> 7.4730</td><td>5.8590</td><td>1.5375</td><td>4.7270</td><td>5.4175</td><td> 6.4510</td><td> 5.7930</td><td> 5.8695</td><td> 9.0620</td><td>⋯</td><td> 5.7760</td><td>6.2960</td><td> 6.6135</td><td> 6.6720</td><td>5.2460</td><td> 6.5230</td><td> 5.7545</td><td>1.9350</td><td> 6.3885</td><td>3.3760</td></tr>\n",
+       "\t<tr><th scope=row>all.stroma_panck.pdl1.cell_percent.density</th><td>0.3137</td><td>21.3651</td><td>1.5995</td><td>0.1327</td><td>0.3559</td><td>0.7182</td><td> 2.8005</td><td> 3.6931</td><td> 2.4717</td><td> 7.7443</td><td>⋯</td><td> 6.8661</td><td>0.7282</td><td> 4.2750</td><td> 9.7576</td><td>1.8289</td><td>16.5536</td><td> 2.5721</td><td>0.3721</td><td> 1.1357</td><td>0.0833</td></tr>\n",
+       "\t<tr><th scope=row>all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression</th><td>4.3280</td><td> 7.5750</td><td>5.7180</td><td>4.1900</td><td>5.8645</td><td>6.2145</td><td> 7.0395</td><td> 7.2870</td><td> 6.9590</td><td> 7.1550</td><td>⋯</td><td> 6.1120</td><td>6.5370</td><td> 5.8200</td><td> 6.7590</td><td>5.4820</td><td> 7.1370</td><td> 6.1030</td><td>3.8200</td><td> 6.1805</td><td>4.6465</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 34 of type dbl\n",
+       "\\begin{tabular}{r|lllllllllllllllllllll}\n",
+       "  & RACTIH & RACTKE & RACTLH & RACTNY & RACTRF & RACTRU & RACTWT & RACTXK & RACTXV & RACTYV & ⋯ & RACVHX & RACVHY & RACVHZ & RACVIR & RACVIS & RACVIV & RACVIZ & RACVJC & RACVKA & RACVLA\\\\\n",
+       "\\hline\n",
+       "\tall.stroma\\_all.cell\\_pdl1.expression & 0.5920 &  2.9370 & 0.5130 & 0.3970 & 0.5000 & 1.1100 &  1.5230 &  2.7920 &  1.9680 &  2.1200 & ⋯ &  1.8600 & 0.6780 &  2.0470 &  2.0965 & 0.8150 &  3.4660 &  1.5620 & 0.3765 &  2.0290 & 0.6620\\\\\n",
+       "\tall.stroma\\_all.pdl1.cell\\_percent.density & 2.4819 & 36.9659 & 3.9697 & 0.9533 & 1.5253 & 8.9148 & 15.6955 & 32.1068 & 17.4949 & 26.2926 & ⋯ & 20.8577 & 3.1912 & 23.1009 & 25.3843 & 4.6836 & 42.1493 & 15.3100 & 3.9041 & 16.2654 & 7.3580\\\\\n",
+       "\tall.stroma\\_cd8.t.cell\\_percent.density & 0.0092 &  1.5515 & 0.2723 & 1.2966 & 0.9067 & 1.7533 &  1.1781 &  4.0825 &  2.0545 &  4.3209 & ⋯ &  1.0760 & 1.6725 & 15.4792 &  1.5936 & 2.2484 &  2.9825 &  6.3502 & 0.7344 &  8.1594 & 0.0972\\\\\n",
+       "\tall.stroma\\_panck.pdl1.cell\\_pdl1.expression & 3.0460 &  7.4730 & 5.8590 & 1.5375 & 4.7270 & 5.4175 &  6.4510 &  5.7930 &  5.8695 &  9.0620 & ⋯ &  5.7760 & 6.2960 &  6.6135 &  6.6720 & 5.2460 &  6.5230 &  5.7545 & 1.9350 &  6.3885 & 3.3760\\\\\n",
+       "\tall.stroma\\_panck.pdl1.cell\\_percent.density & 0.3137 & 21.3651 & 1.5995 & 0.1327 & 0.3559 & 0.7182 &  2.8005 &  3.6931 &  2.4717 &  7.7443 & ⋯ &  6.8661 & 0.7282 &  4.2750 &  9.7576 & 1.8289 & 16.5536 &  2.5721 & 0.3721 &  1.1357 & 0.0833\\\\\n",
+       "\tall.stroma\\_panckneg.cd3neg.pdl1.cell\\_pdl1.expression & 4.3280 &  7.5750 & 5.7180 & 4.1900 & 5.8645 & 6.2145 &  7.0395 &  7.2870 &  6.9590 &  7.1550 & ⋯ &  6.1120 & 6.5370 &  5.8200 &  6.7590 & 5.4820 &  7.1370 &  6.1030 & 3.8200 &  6.1805 & 4.6465\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 34 of type dbl\n",
+       "\n",
+       "| <!--/--> | RACTIH | RACTKE | RACTLH | RACTNY | RACTRF | RACTRU | RACTWT | RACTXK | RACTXV | RACTYV | ⋯ | RACVHX | RACVHY | RACVHZ | RACVIR | RACVIS | RACVIV | RACVIZ | RACVJC | RACVKA | RACVLA |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| all.stroma_all.cell_pdl1.expression | 0.5920 |  2.9370 | 0.5130 | 0.3970 | 0.5000 | 1.1100 |  1.5230 |  2.7920 |  1.9680 |  2.1200 | ⋯ |  1.8600 | 0.6780 |  2.0470 |  2.0965 | 0.8150 |  3.4660 |  1.5620 | 0.3765 |  2.0290 | 0.6620 |\n",
+       "| all.stroma_all.pdl1.cell_percent.density | 2.4819 | 36.9659 | 3.9697 | 0.9533 | 1.5253 | 8.9148 | 15.6955 | 32.1068 | 17.4949 | 26.2926 | ⋯ | 20.8577 | 3.1912 | 23.1009 | 25.3843 | 4.6836 | 42.1493 | 15.3100 | 3.9041 | 16.2654 | 7.3580 |\n",
+       "| all.stroma_cd8.t.cell_percent.density | 0.0092 |  1.5515 | 0.2723 | 1.2966 | 0.9067 | 1.7533 |  1.1781 |  4.0825 |  2.0545 |  4.3209 | ⋯ |  1.0760 | 1.6725 | 15.4792 |  1.5936 | 2.2484 |  2.9825 |  6.3502 | 0.7344 |  8.1594 | 0.0972 |\n",
+       "| all.stroma_panck.pdl1.cell_pdl1.expression | 3.0460 |  7.4730 | 5.8590 | 1.5375 | 4.7270 | 5.4175 |  6.4510 |  5.7930 |  5.8695 |  9.0620 | ⋯ |  5.7760 | 6.2960 |  6.6135 |  6.6720 | 5.2460 |  6.5230 |  5.7545 | 1.9350 |  6.3885 | 3.3760 |\n",
+       "| all.stroma_panck.pdl1.cell_percent.density | 0.3137 | 21.3651 | 1.5995 | 0.1327 | 0.3559 | 0.7182 |  2.8005 |  3.6931 |  2.4717 |  7.7443 | ⋯ |  6.8661 | 0.7282 |  4.2750 |  9.7576 | 1.8289 | 16.5536 |  2.5721 | 0.3721 |  1.1357 | 0.0833 |\n",
+       "| all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression | 4.3280 |  7.5750 | 5.7180 | 4.1900 | 5.8645 | 6.2145 |  7.0395 |  7.2870 |  6.9590 |  7.1550 | ⋯ |  6.1120 | 6.5370 |  5.8200 |  6.7590 | 5.4820 |  7.1370 |  6.1030 | 3.8200 |  6.1805 | 4.6465 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "                                                     RACTIH RACTKE  RACTLH\n",
+       "all.stroma_all.cell_pdl1.expression                  0.5920  2.9370 0.5130\n",
+       "all.stroma_all.pdl1.cell_percent.density             2.4819 36.9659 3.9697\n",
+       "all.stroma_cd8.t.cell_percent.density                0.0092  1.5515 0.2723\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression           3.0460  7.4730 5.8590\n",
+       "all.stroma_panck.pdl1.cell_percent.density           0.3137 21.3651 1.5995\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression 4.3280  7.5750 5.7180\n",
+       "                                                     RACTNY RACTRF RACTRU\n",
+       "all.stroma_all.cell_pdl1.expression                  0.3970 0.5000 1.1100\n",
+       "all.stroma_all.pdl1.cell_percent.density             0.9533 1.5253 8.9148\n",
+       "all.stroma_cd8.t.cell_percent.density                1.2966 0.9067 1.7533\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression           1.5375 4.7270 5.4175\n",
+       "all.stroma_panck.pdl1.cell_percent.density           0.1327 0.3559 0.7182\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression 4.1900 5.8645 6.2145\n",
+       "                                                     RACTWT  RACTXK  RACTXV \n",
+       "all.stroma_all.cell_pdl1.expression                   1.5230  2.7920  1.9680\n",
+       "all.stroma_all.pdl1.cell_percent.density             15.6955 32.1068 17.4949\n",
+       "all.stroma_cd8.t.cell_percent.density                 1.1781  4.0825  2.0545\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression            6.4510  5.7930  5.8695\n",
+       "all.stroma_panck.pdl1.cell_percent.density            2.8005  3.6931  2.4717\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression  7.0395  7.2870  6.9590\n",
+       "                                                     RACTYV  ⋯ RACVHX  RACVHY\n",
+       "all.stroma_all.cell_pdl1.expression                   2.1200 ⋯  1.8600 0.6780\n",
+       "all.stroma_all.pdl1.cell_percent.density             26.2926 ⋯ 20.8577 3.1912\n",
+       "all.stroma_cd8.t.cell_percent.density                 4.3209 ⋯  1.0760 1.6725\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression            9.0620 ⋯  5.7760 6.2960\n",
+       "all.stroma_panck.pdl1.cell_percent.density            7.7443 ⋯  6.8661 0.7282\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression  7.1550 ⋯  6.1120 6.5370\n",
+       "                                                     RACVHZ  RACVIR  RACVIS\n",
+       "all.stroma_all.cell_pdl1.expression                   2.0470  2.0965 0.8150\n",
+       "all.stroma_all.pdl1.cell_percent.density             23.1009 25.3843 4.6836\n",
+       "all.stroma_cd8.t.cell_percent.density                15.4792  1.5936 2.2484\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression            6.6135  6.6720 5.2460\n",
+       "all.stroma_panck.pdl1.cell_percent.density            4.2750  9.7576 1.8289\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression  5.8200  6.7590 5.4820\n",
+       "                                                     RACVIV  RACVIZ  RACVJC\n",
+       "all.stroma_all.cell_pdl1.expression                   3.4660  1.5620 0.3765\n",
+       "all.stroma_all.pdl1.cell_percent.density             42.1493 15.3100 3.9041\n",
+       "all.stroma_cd8.t.cell_percent.density                 2.9825  6.3502 0.7344\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression            6.5230  5.7545 1.9350\n",
+       "all.stroma_panck.pdl1.cell_percent.density           16.5536  2.5721 0.3721\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression  7.1370  6.1030 3.8200\n",
+       "                                                     RACVKA  RACVLA\n",
+       "all.stroma_all.cell_pdl1.expression                   2.0290 0.6620\n",
+       "all.stroma_all.pdl1.cell_percent.density             16.2654 7.3580\n",
+       "all.stroma_cd8.t.cell_percent.density                 8.1594 0.0972\n",
+       "all.stroma_panck.pdl1.cell_pdl1.expression            6.3885 3.3760\n",
+       "all.stroma_panck.pdl1.cell_percent.density            1.1357 0.0833\n",
+       "all.stroma_panckneg.cd3neg.pdl1.cell_pdl1.expression  6.1805 4.6465"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(t(all.measures))"
    ]
   },
   {
